[gd_scene load_steps=29 format=2]

[ext_resource path="res://joystick/virtual_joystick.tscn" type="PackedScene" id=1]
[ext_resource path="res://fonts/Oxanium-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://models/meshlib/WallTile.tres" type="MeshLibrary" id=3]
[ext_resource path="res://scenes/Button.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/Goal.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=6]
[ext_resource path="res://models/player/RedMaterial.material" type="Material" id=7]
[ext_resource path="res://textures/floor.png" type="Texture" id=8]
[ext_resource path="res://audio/sfx/VictorySound.wav" type="AudioStream" id=9]
[ext_resource path="res://scripts/Main.gd" type="Script" id=10]
[ext_resource path="res://textures/tapIcon.png" type="Texture" id=11]

[sub_resource type="DynamicFont" id=19]
size = 200
outline_size = 8
outline_color = Color( 0.14902, 0.14902, 0.14902, 1 )
font_data = ExtResource( 2 )

[sub_resource type="SpatialMaterial" id=21]
albedo_color = Color( 0.054902, 1, 0.054902, 1 )

[sub_resource type="SpatialMaterial" id=22]
albedo_color = Color( 1, 1, 0.0588235, 1 )

[sub_resource type="SpatialMaterial" id=26]
albedo_color = Color( 0.054902, 1, 0, 1 )

[sub_resource type="CubeMesh" id=27]

[sub_resource type="ConcavePolygonShape" id=28]
data = PoolVector3Array( -1, 1, 1, 1, 1, 1, -1, -1, 1, 1, 1, 1, 1, -1, 1, -1, -1, 1, 1, 1, -1, -1, 1, -1, 1, -1, -1, -1, 1, -1, -1, -1, -1, 1, -1, -1, 1, 1, 1, 1, 1, -1, 1, -1, 1, 1, 1, -1, 1, -1, -1, 1, -1, 1, -1, 1, -1, -1, 1, 1, -1, -1, -1, -1, 1, 1, -1, -1, 1, -1, -1, -1, 1, 1, 1, -1, 1, 1, 1, 1, -1, -1, 1, 1, -1, 1, -1, 1, 1, -1, -1, -1, 1, 1, -1, 1, -1, -1, -1, 1, -1, 1, 1, -1, -1, -1, -1, -1 )

[sub_resource type="CubeMesh" id=29]

[sub_resource type="SpatialMaterial" id=30]
albedo_color = Color( 1, 0.960784, 0, 1 )

[sub_resource type="BoxShape" id=31]

[sub_resource type="CubeMesh" id=32]

[sub_resource type="SpatialMaterial" id=33]
albedo_texture = ExtResource( 8 )
uv1_scale = Vector3( 9, 7, 1 )

[sub_resource type="ConcavePolygonShape" id=34]
data = PoolVector3Array( -1, 1, 1, 1, 1, 1, -1, -1, 1, 1, 1, 1, 1, -1, 1, -1, -1, 1, 1, 1, -1, -1, 1, -1, 1, -1, -1, -1, 1, -1, -1, -1, -1, 1, -1, -1, 1, 1, 1, 1, 1, -1, 1, -1, 1, 1, 1, -1, 1, -1, -1, 1, -1, 1, -1, 1, -1, -1, 1, 1, -1, -1, -1, -1, 1, 1, -1, -1, 1, -1, -1, -1, 1, 1, 1, -1, 1, 1, 1, 1, -1, -1, 1, 1, -1, 1, -1, 1, 1, -1, -1, -1, 1, 1, -1, 1, -1, -1, -1, 1, -1, 1, 1, -1, -1, -1, -1, -1 )

[sub_resource type="ProceduralSky" id=18]
sky_top_color = Color( 0.266667, 0.560784, 0.721569, 1 )
sky_horizon_color = Color( 0.188235, 0.345098, 0.47451, 1 )
sky_curve = 0.0636399
ground_bottom_color = Color( 0.184314, 0.235294, 0.286275, 1 )

[sub_resource type="Environment" id=35]
background_mode = 2
background_sky = SubResource( 18 )
ambient_light_color = Color( 0.466667, 0.466667, 0.466667, 1 )
tonemap_mode = 3

[sub_resource type="Animation" id=36]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("VictoryScreen:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("VictoryScreen/ColorRect:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -1920, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("VictoryScreen/StageClear:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -1620.5, 440 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("VictoryScreen/StageClear:visible_characters")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("VictoryScreen/ColorRect:rect_size")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1920, 1080 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("VictoryScreen:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=37]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/path = NodePath("VictoryScreen/ColorRect:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 1920, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("VictoryScreen/StageClear:visible_characters")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("VictoryScreen/ColorRect:rect_size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1920, 1080 ), Vector2( 1920, 1080 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("VictoryScreen:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=38]
resource_name = "fade_out"
length = 1.3
tracks/0/type = "value"
tracks/0/path = NodePath("VictoryScreen/ColorRect:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -1920, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("VictoryScreen/StageClear:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -1620.5, 440 ), Vector2( 299.5, 440 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("VictoryScreen/StageClear:visible_characters")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ -1, -1 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("VictoryScreen:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("VictoryScreen/ColorRect:rect_size")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1920, 1080 ), Vector2( 1920, 1080 ) ]
}

[node name="Spatial" type="Spatial"]
script = ExtResource( 10 )
next_level = "res://scenes/Levels/Level2.tscn"

[node name="VictoryScreen" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 21120.0
margin_bottom = 11880.0

[node name="ColorRect" type="ColorRect" parent="VictoryScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1920.0
margin_bottom = 1080.0
color = Color( 0, 0, 0, 1 )

[node name="StageClear" type="Label" parent="VictoryScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1620.5
margin_top = 440.0
margin_right = -299.5
margin_bottom = 640.0
custom_fonts/font = SubResource( 19 )
text = "Stage Cleared"
percent_visible = 0.0

[node name="Virtual joystick" parent="." instance=ExtResource( 1 )]
margin_left = 760.0
margin_top = -440.0
margin_right = 960.0
margin_bottom = -240.0
rect_scale = Vector2( 2, 2 )
clampzone_size = 100.0
action_left = "move_left"
action_right = "move_right"
action_up = "move_up"
action_down = "move_down"

[node name="Player" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 2.20499, 2 )
color = ExtResource( 7 )

[node name="Player2" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 7, 2.20499, 5 )
color = ExtResource( 7 )

[node name="Goal" parent="." instance=ExtResource( 5 )]
transform = Transform( 0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, 3, -1, -11 )

[node name="Goal2" parent="." instance=ExtResource( 5 )]
transform = Transform( 0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, 0.707107, -9, -1, -7 )

[node name="GreenButton" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 0, 10 )
color = "green_doors"
collision = "green_collider"
button_color = SubResource( 21 )

[node name="YellowButton" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9, 0, -7 )
color = "yellow_doors"
collision = "yellow_collider"
button_color = SubResource( 22 )

[node name="GridMap" type="GridMap" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, -1, 0 )
mesh_library = ExtResource( 3 )
data = {
"cells": PoolIntArray( 5, 0, 0, 65529, 0, 0, 65535, 0, 0, 5, 1, 0, 65529, 1, 0, 65535, 1, 0, 5, 2, 0, 65529, 2, 0, 65535, 2, 0, 5, 3, 0, 65529, 3, 0, 65535, 3, 0, 5, 4, 0, 65529, 4, 0, 65535, 4, 0, 5, 5, 0, 65529, 5, 0, 65535, 5, 0, 0, 6, 0, 1, 6, 0, 2, 6, 0, 3, 6, 0, 4, 6, 0, 5, 6, 0, 65529, 6, 0, 65530, 6, 0, 65531, 6, 0, 65532, 6, 0, 65533, 6, 0, 65534, 6, 0, 65535, 6, 0, 0, 65529, 0, 1, 65529, 0, 2, 65529, 0, 3, 65529, 0, 4, 65529, 0, 5, 65529, 0, 65529, 65529, 0, 65530, 65529, 0, 65531, 65529, 0, 65532, 65529, 0, 65533, 65529, 0, 65534, 65529, 0, 65535, 65529, 0, 5, 65530, 0, 65529, 65530, 0, 65535, 65530, 0, 5, 65531, 0, 65529, 65531, 0, 65535, 65531, 0, 5, 65532, 0, 65529, 65532, 0, 65535, 65532, 0, 5, 65533, 0, 65529, 65533, 0, 65535, 65533, 0, 0, 65534, 0, 3, 65534, 0, 4, 65534, 0, 5, 65534, 0, 65529, 65534, 0, 65530, 65534, 0, 65531, 65534, 0, 65534, 65534, 0, 65535, 65534, 0, 5, 65535, 0, 65529, 65535, 0, 65535, 65535, 0 )
}
__meta__ = {
"_editor_clip_": 0,
"_editor_floor_": Vector3( 0, 0, 0 )
}

[node name="GreenDoors" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )

[node name="Door1" type="StaticBody" parent="GreenDoors" groups=["green_doors"]]
transform = Transform( -1.31134e-08, 0, -2, 0, 1, 0, 0.3, 0, -8.74228e-08, 5, 1, -3 )

[node name="MeshInstance" type="MeshInstance" parent="GreenDoors/Door1"]
material_override = SubResource( 26 )
mesh = SubResource( 27 )
skeleton = NodePath("../..")

[node name="CollisionShape" type="CollisionShape" parent="GreenDoors/Door1" groups=["green_collider"]]
shape = SubResource( 28 )

[node name="YellowDoors" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )

[node name="Door1" type="StaticBody" parent="YellowDoors" groups=["yellow_doors"]]
transform = Transform( 2, 0, 0, 0, 1, 0, 0, 0, 0.3, -5, 1, -3 )

[node name="MeshInstance" type="MeshInstance" parent="YellowDoors/Door1"]
mesh = SubResource( 29 )
material/0 = SubResource( 30 )

[node name="CollisionShape" type="CollisionShape" parent="YellowDoors/Door1" groups=["yellow_collider"]]
shape = SubResource( 31 )

[node name="Floor" type="MeshInstance" parent="."]
transform = Transform( 13, 0, 0, 0, 1, 0, 0, 0, 14, 0, -2, 0 )
mesh = SubResource( 32 )
material/0 = SubResource( 33 )

[node name="StaticBody" type="StaticBody" parent="Floor"]

[node name="CollisionShape" type="CollisionShape" parent="Floor/StaticBody"]
shape = SubResource( 34 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, -0.258819, 0.965926, 0, -0.965926, -0.258819, 0, 14, -21 )
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 35 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.5, 0.866026, 0, -0.866026, 0.5, 0, 13, 13 )
fov = 75.0

[node name="VictorySound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 36 )
anims/fade_in = SubResource( 37 )
anims/fade_out = SubResource( 38 )

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform( 0.866025, -0.5, -2.18557e-08, 0, -4.37114e-08, 1, -0.5, -0.866025, -3.78552e-08, 8.17315, -0.973177, 6.79501 )
texture = ExtResource( 11 )

[connection signal="area_entered" from="Goal" to="." method="_on_Goal_area_entered"]
[connection signal="area_exited" from="Goal" to="." method="_on_Goal_area_exited"]
[connection signal="area_entered" from="Goal2" to="." method="_on_Goal2_area_entered"]
[connection signal="area_exited" from="Goal2" to="." method="_on_Goal2_area_exited"]
